[project]
name = "wztools"
version = "0.2.3"
description = "个人用工具库"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
extra-index-url = ["https://pypi.org/simple/"]
