[project]
name = "wztools"
version = "v2026.04.28"
description = "个人用工具库"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "rich",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "build>=1.0",
    "setuptools>=80.9.0",
    "twine>=6.2.0",
]

[tool.uv]
index-url = "https://pypi.mirrors.ustc.edu.cn/simple/"
extra-index-url = ["https://pypi.org/simple/"]